--- a/test.html
+++ b/test.html
@@ -1,1 +1,10 @@
-<H1>Welcome to sanjay</H1>
+<!DOCTYPE html>
+<html>
+<body>
+
+<h1>Welcom BarathM/h1>
+
+<p>My first paragraph.</p>
+
+</body>
+</html>
